--- a/html/img_study.html
+++ b/html/img_study.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <img src="./files/backup.png" alt="Big Boat">
-    <img src="./files/backup.png" alt="Pulpit rock" width="304" height="228">
+<img src="./files/backup.png" alt="Big Boat">
+<img src="./files/backup.png" alt="Pulpit rock" width="304" height="228">
 </body>
 
 </html>
