--- a/html/list_study.html
+++ b/html/list_study.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,31 +7,31 @@
 </head>
 
 <body>
-    <!-- 无序列表 -->
-    <div>
-        <ul>
-            <li>Coffee</li>
-            <li>Milk</li>
-        </ul>
-    </div>
+<!-- 无序列表 -->
+<div>
+    <ul>
+        <li>Coffee</li>
+        <li>Milk</li>
+    </ul>
+</div>
 
-    <!-- 有序列表 -->
-    <div>
-        <ol>
-            <li>Coffee</li>
-            <li>Milk</li>
-        </ol>
-    </div>
+<!-- 有序列表 -->
+<div>
+    <ol>
+        <li>Coffee</li>
+        <li>Milk</li>
+    </ol>
+</div>
 
-    <!-- 自定义列表 -->
-    <div>
-        <dl>
-            <dt>Coffee</dt>
-            <dd>- black hot drink</dd>
-            <dt>Milk</dt>
-            <dd>- white cold drink</dd>
-        </dl>
-    </div>
+<!-- 自定义列表 -->
+<div>
+    <dl>
+        <dt>Coffee</dt>
+        <dd>- black hot drink</dd>
+        <dt>Milk</dt>
+        <dd>- white cold drink</dd>
+    </dl>
+</div>
 </body>
 
 </html>
