--- a/html/table_study.html
+++ b/html/table_study.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,27 +7,27 @@
 </head>
 
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th>列标题1</th>
-                <th>列标题2</th>
-                <th>列标题3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>行1,列1</td>
-                <td>行1,列2</td>
-                <td>行1,列3</td>
-            </tr>
-            <tr>
-                <td>行2,列1</td>
-                <td>行2,列2</td>
-                <td>行2,列3</td>
-            </tr>
-        </tbody>
-    </table>
+<table>
+    <thead>
+    <tr>
+        <th>列标题1</th>
+        <th>列标题2</th>
+        <th>列标题3</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>行1,列1</td>
+        <td>行1,列2</td>
+        <td>行1,列3</td>
+    </tr>
+    <tr>
+        <td>行2,列1</td>
+        <td>行2,列2</td>
+        <td>行2,列3</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 
 </html>
