--- a/html/element_study.html
+++ b/html/element_study.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,16 +7,16 @@
 </head>
 
 <body>
-    <h1>这是一个标题</h1>
-    <!-- <hr> 标签在 HTML 页面中创建水平线 -->
-    <hr>
-    <h2>这是一个标题</h2>
-    <h3>这是一个标题</h3>
-    <p>这是一个段落。</p>
-    <p>这是另外一个段落。</p>
-    <!-- 插入单个换行 -->
-    <br>
-    <a href="https://www.baidu.com">这是一个链接</a>
+<h1>这是一个标题</h1>
+<!-- <hr> 标签在 HTML 页面中创建水平线 -->
+<hr>
+<h2>这是一个标题</h2>
+<h3>这是一个标题</h3>
+<p>这是一个段落。</p>
+<p>这是另外一个段落。</p>
+<!-- 插入单个换行 -->
+<br>
+<a href="https://www.baidu.com">这是一个链接</a>
 </body>
 
 </html>
