--- a/html/iframe_study.html
+++ b/html/iframe_study.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-    <h1>通过使用iframe框架,可以在同一个浏览器窗口中显示不止一个页面。</h1>
-    <iframe src="demo_iframe.html" name="iframe_a" width="200" height="200"></iframe>
-    <p><a href="https://www.baidu.com/" target="iframe_a">baidu</a></p>
+<h1>通过使用iframe框架,可以在同一个浏览器窗口中显示不止一个页面。</h1>
+<iframe src="demo_iframe.html" name="iframe_a" width="200" height="200"></iframe>
+<p><a href="https://www.baidu.com/" target="iframe_a">baidu</a></p>
 
-    <p><b>注意：</b> 因为 a 标签的 target 属性是名为 iframe_a 的 iframe 框架，所以在点击链接时页面会显示在 iframe框架中。</p>
+<p><b>注意：</b> 因为 a 标签的 target 属性是名为 iframe_a 的 iframe 框架，所以在点击链接时页面会显示在 iframe框架中。</p>
 
 </body>
 
