--- a/html/style_study.html
+++ b/html/style_study.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-    <h1 style="font-family:verdana;">一个标题</h1>
-    <p style="font-family:arial;color:red;font-size:20px;">一个段落。</p>
-    <h1 style="text-align:center;">居中对齐的标题</h1>
-    <p>这是一个段落。</p>
-    <h2 style="background-color:red;">这是一个标题</h2>
-    <p style="background-color:green;">这是一个段落。</p>
+<h1 style="font-family:verdana;">一个标题</h1>
+<p style="font-family:arial;color:red;font-size:20px;">一个段落。</p>
+<h1 style="text-align:center;">居中对齐的标题</h1>
+<p>这是一个段落。</p>
+<h2 style="background-color:red;">这是一个标题</h2>
+<p style="background-color:green;">这是一个段落。</p>
 </body>
 
 </html>
