--- a/javascript/array/JS_Array01.html
+++ b/javascript/array/JS_Array01.html
@@ -8,19 +8,20 @@
 </head>
 
 <body>
-    <button type="button" onclick="startShow()">点击运行</button>
-    <script>
-        var arr = new Array();
-        arr.push("A");
-        arr.push("B");
-        arr.push("C");
-        console.log("arr:\n" + arr);
-        function startShow() {
-            for (var i = 0; i < arr.length; i++) {
-                console.log(i + "  :  " + arr[i]);
-            }
+<button type="button" onclick="startShow()">点击运行</button>
+<script>
+    var arr = [];
+    arr.push("A");
+    arr.push("B");
+    arr.push("C");
+    console.log("arr:\n" + arr);
+
+    function startShow() {
+        for (var i = 0; i < arr.length; i++) {
+            console.log(i + "  :  " + arr[i]);
         }
-    </script>
+    }
+</script>
 </body>
 
 </html>
