--- a/javascript/array/JS_Array02.html
+++ b/javascript/array/JS_Array02.html
@@ -8,22 +8,22 @@
 </head>
 
 <body>
-    <button type="button" onclick="startShow()">点击运行</button>
-    <script>
-        function startShow() {
-            var arr = new Array();
-            for (var i = 0; i < 3; i++) {
-                var map = new Map();
-                map.set("k1", i * 10 + 1);
-                map.set("k2", i * 10 + 2);
-                map.set("k3", i * 10 + 3);
-                arr.push(map);
-            }
-            var tmp_map = arr[2];
-            var tmp_value = tmp_map.get("k2");
-            console.log("arr[2] k2 = " + tmp_value);
+<button type="button" onclick="startShow()">点击运行</button>
+<script>
+    function startShow() {
+        var arr = [];
+        for (var i = 0; i < 3; i++) {
+            var map = new Map();
+            map.set("k1", i * 10 + 1);
+            map.set("k2", i * 10 + 2);
+            map.set("k3", i * 10 + 3);
+            arr.push(map);
         }
-    </script>
+        var tmp_map = arr[2];
+        var tmp_value = tmp_map.get("k2");
+        console.log("arr[2] k2 = " + tmp_value);
+    }
+</script>
 </body>
 
 </html>
